--- a/g2p_odk_user_mapping/views/registration_user_backend_view.xml
+++ b/g2p_odk_user_mapping/views/registration_user_backend_view.xml
@@ -12,8 +12,13 @@
                         invisible="context.get('default_supplier_rank')  &lt; 1"
                     />
                     <field
+                        name="project"
+                        readonly="true"
+                    />
+                    <field
                         name="odk_app_user"
                         options="{'no_create': True}"
+                        domain="[('project_id', '=', project)]"
                         invisible="context.get('default_supplier_rank') &lt; 1"
                     />
                 </group>
