--- a/g2p_odk_user_mapping/views/registration_user_backend_view.xml
+++ b/g2p_odk_user_mapping/views/registration_user_backend_view.xml
@@ -11,10 +11,7 @@
                         options="{'no_create': True}"
                         invisible="context.get('default_supplier_rank')  &lt; 1"
                     />
-                    <field
-                        name="project"
-                        readonly="true"
-                    />
+                    <field name="project" readonly="true" />
                     <field
                         name="odk_app_user"
                         options="{'no_create': True}"
